# xtorch

./: .CMakeLists.txt.kate-swp  .gitignore  .readthedocs.yaml  CMakeLists-back.txt  CMakeLists-final-linux.txt  CMakeLists-final.txt  CMakeLists-t.txt  CMakeLists-tar.txt  CMakeLists.txt  Dockerfile  Dockerfile1  Doxyfile  Doxyfile.bak  README.MD  cmake_uninstall.cmake.in  commands.txt  install  install-deps.sh  install.sh  main.cpp  mkdocs.yml  paper.bib  paper.md  paper1.md  path.cpp  requirements.txt  toolchain-aarch64.cmake  tr.cpp  xtorch.h  xtorch.kdev4
.kdev4/: xtorch.kdev4
cmake/: amd.cmake  arm.cmake  dependencies.cmake  installation.cmake  linux.cmake  targets.cmake  windows-broken.cmake  windows.cmake  xTorchConfig.cmake.in
docs/: index.md
examples/: CMakeLists.txt  todo.md
examples/cnn/: alexnet-cifar10.cpp  alexnet-cifar100.cpp  alexnet-fashionmnist.cpp  alexnet-food101.cpp  alexnet-imagenette.cpp  alexnet-mnist.cpp  alexnet_cifar10.cpp  alexnet_cifar100.cpp  alexnet_fashionmnist.cpp  alexnet_food101.cpp  alexnet_imagenette.cpp  alexnet_mnist.cpp  lenet5-cifar10.cpp  lenet5-cifar100.cpp  lenet5-fashionmnist.cpp  lenet5-food101.cpp  lenet5-imagenette.cpp  lenet5-mnist.cpp  lenet5_cifar10.cpp  lenet5_cifar100.cpp  lenet5_fashionmnist.cpp  lenet5_food101.cpp  lenet5_imagenette.cpp  lenet5_mnist.cpp  resnet-cifar10.cpp  resnet-cifar100.cpp  resnet-fashionmnist.cpp  resnet-food101.cpp  resnet-imagenette.cpp  resnet-mnist.cpp  resnet_cifar10.cpp  resnet_cifar100.cpp  resnet_fashionmnist.cpp  resnet_food101.cpp  resnet_imagenette.cpp  resnet_mnist.cpp  vggnet16-cifar10.cpp  vggnet16-cifar100.cpp  vggnet16-fashionmnist.cpp  vggnet16-food101.cpp  (+8 more)
examples/data_loaders/: custom_data_loader.cpp
examples/test/: CMakeLists.txt  main.cpp
examples/trainer/: simple.cpp
future_work/: to_tensor.cpp
include/: xtorch.h
junks/: CMakeLists-after-lib-onnx-third-party.txt
publications/: Dockerfile-final-local  Dockerfile1  to_promote.md  to_promote_02.md
python/: converter.py  requirements.txt  transformers_helper.py
scripts/: inference.py  install.sh  setup.sh
temp/: CMakeLists.txt  alexnetparametric.cpp  cifar-100-downloader.cpp  cnpytest.cpp  cntfiles.cpp  csvtest.cpp  curlprg.cpp  dltest2.cpp  (+32 more)
test/: CMakeLists.txt  test_datasets.cpp  test_models.cpp
test/src/: test_activations.cpp  test_dataloader.cpp  test_dropouts.cpp  test_linalg.cpp  test_losses.cpp  test_models.cpp  test_normalizations.cpp  test_optimizers.cpp  test_transforms.cpp
tests/: CMakeLists.txt  my_lib.cpp  my_lib.h  test_linalg.cpp
torch-extension/: CMakeLists.txt  README.MD  check-deps.sh  cntfiles.cpp  imgnt.cpp  imgresize.cpp  install.sh  letest.cpp  md.cpp  md2.cpp  mnt-t.cpp  mnt.cpp  t.cpp  t3.cpp  t4.cpp  t5.cpp  test.cpp  tgz.cpp  vdtest.cpp  xz.cpp
torch-extension/examples/: CMakeLists.txt
torch-extension/examples/cnn/: alexnet-cifar10.cpp  alexnet-cifar100.cpp  alexnet-fashionmnist.cpp  alexnet-food101.cpp  alexnet-imagenette.cpp  alexnet-mnist.cpp  lenet5-cifar10.cpp  lenet5-cifar100.cpp  lenet5-fashionmnist.cpp  lenet5-food101.cpp  lenet5-imagenette.cpp  lenet5-mnist.cpp  resnet-cifar10.cpp  resnet-cifar100.cpp  resnet-fashionmnist.cpp  resnet-food101.cpp  resnet-imagenette.cpp  resnet-mnist.cpp  vggnet16-cifar10.cpp  vggnet16-cifar100.cpp  vggnet16-fashionmnist.cpp  vggnet16-food101.cpp  vggnet16-imagenette.cpp  vggnet16-mnist.cpp
torch-extension/examples/cnn/includes/: base.h
torch-extension/examples/trainer/: simple.cpp
torch-extension/include/: base.h
torch-extension/include/base/: datasets.h
torch-extension/include/data-loaders/: data-loader.h
torch-extension/include/datasets/: base.h  caltech.h  celeba.h  cifar.h  cityscapes.h  coco.h  country.h  cre-stereo.h  dtd.h  eth-3d-stereo.h  euro-sat.h  fake-data.h  falling-things-stereo.h  fer.h  fgvc-aircraft.h  flickr.h  flowers.h  flying.h  food.h  functions.h  gtsrb.h  hd1k.h  hmdb.h  image-folder.h  imagenet.h  imagenette.h  in-stereo.h  inaturalist.h  kinetics.h  kitti.h  lfw.h  lsun.h  middlebury.h  mnist.h  moving-mnist.h  omniglot.h  oxfordIII-t-pet.h  pcam.h  photo-tour.h  places.h  (+14 more)
torch-extension/include/datasets/definitions/: functions.h
torch-extension/include/definitions/: transforms.h
torch-extension/include/exceptions/: implementation.h
torch-extension/include/headers/: datasets.h
torch-extension/include/media/opencv/: images.h  videos.h
torch-extension/include/models/: base.h
torch-extension/include/models/cnn/: alexnet.h  lenet5.h  mobilenet.h  resnet.h  vggnet.h  vggnet16.h
torch-extension/include/trainers/: trainer.h
torch-extension/include/types/: arguments.h
torch-extension/include/utils/: archiver.h  base.h  downloader.h  extract.h  filesystem.h  md5.h  string.h
torch-extension/src/data-loaders/: data-loader.cpp
torch-extension/src/datasets/: base.cpp  caltech.cpp  celeba.cpp  cifar.cpp  cityscapes.cpp  coco.cpp  country.cpp  cre-stereo.cpp  dtd.cpp  emnist.cpp  eth-3d-stereo.cpp  euro-sat.cpp  fake-data.cpp  falling-things-stereo.cpp  fashion-mnist.cpp  fer.cpp  fgvc-aircraft.cpp  flickr.cpp  flowers.cpp  flying.cpp  food.cpp  functions.cpp  gtsrb.cpp  hd1k.cpp  hmdb.cpp  image-folder.cpp  imagenet.cpp  imagenette.cpp  in-stereo.cpp  inaturalist.cpp  kinetics.cpp  kitti.cpp  kmnist.cpp  lfw.cpp  lsun.cpp  middlebury.cpp  mnist.cpp  moving-mnist.cpp  omniglot.cpp  oxfordIII-t-pet.cpp  (+17 more)
torch-extension/src/datasets/definitions/: functions.cpp
torch-extension/src/definitions/: transforms.cpp
torch-extension/src/media/opencv/: images.cpp  videos.cpp
torch-extension/src/models/: base.cpp
torch-extension/src/models/cnn/: alexnet.cpp  lenet5.cpp  mobilenet.cpp  resnet.cpp  unet.cpp  vggnet.cpp  vggnet16.cpp
torch-extension/src/trainers/: trainer.cpp
torch-extension/src/utils/: archiver.cpp  downloader.cpp  extract.cpp  filesystem.cpp  md5.cpp  string.cpp
torch-extension/temp/: CMakeLists.txt  cntfiles.cpp  dltest.cpp  dltest3.cpp  dltest4.cpp  imgnt.cpp  letest.cpp  md.cpp  md2.cpp  mnt.cpp  mntcomp.cpp  mntcomp2.cpp  test.cpp  trtest.cpp  trtest2.cpp  vdtest.cpp
(+6481 files in other folders)
